bin_PROGRAMS = qubicvalidate
qubicvalidate_SOURCES = statelist.cpp win.cpp strategic.cpp state.cpp point.cpp line.cpp iso.cpp board.cpp main.cpp 
qubicvalidate_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp board.cpp board.h iso.h iso.cpp line.cpp line.h link.h point.h point.cpp state.h state.cpp strategic.h strategic.cpp win.h win.cpp statelist.h statelist.cpp qval.h runtests.sh 
